[docker] use normal container to run plugin
1. some general bug fix
2. reuseport fix of unix domain sockets
3. NetworkIPAM fix for higher version docker api
4. implement proxy and plugin entry
5. Makefile upgrade
6. add doc about this commit